# stardict-3

./: .hgignore  AUTHORS  BUGS  Building.md  ChangeLog  ConvertBabylon.md  ConvertLingvo.md  DownloadDictionaries.md  DslSound.md  FAQ.md  INSTALL  InspectStarDictIndex.md  MacOSX.md  Makefile.am  ProjectHome.md  README  README.SVN  RepairStarDictDicts.md  TODO  WyabdcRealPeopleTTS.md  autogen.sh  config-custom.h  config.h.in  configure.ac  configure.in  index.md  intltool-update.in  sigc++config.h  stardict-installer.nsi  stardict-prepare-installer.bat  stardict-prepare-installer.js  stardict-withoutgnome.spec.in  stardict.dev  stardict.spec.in  stardictrc.rc
data/: Makefile.am  stardict.1  stardict.desktop.in  stardict.schemas.in
dict/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  autogen.sh  configure.ac  dictionary.spec  stardict-fedora-dic-xxxx.spec  stardict-fedora.spec  stardict-installer.nsi  stardict-prepare-installer.js  stardict-withoutgnome.spec.in  stardict.spec.in  treedict.spec
dict/data/: Makefile.am  stardict.1  stardict.appdata.xml.in  stardict.desktop.in  stardict.schemas.in
dict/debian-upstream/: Makefile.am  README.Debian  changelog  control  copyright  rules  stardict.docs  stardict.manpages  watch
dict/doc/: Building  DirectoryLayout  FAQ  HACKING  Makefile.am  README_windows.txt  Readme.mac  Skins  StarDictFileFormat  TextualDictionaryFileFormat  Translation  stardict-textual-dict.rnc
dict/help/: Makefile.am  stardict.omf.in
dict/m4/: cxx_std.m4
dict/mac_dist/: Info-stardict.plist  Makefile.am  Stardict.icns  launcher.sh  stardict.bundle
dict/msvc_2008/: Makefile.am  common-lib.vcproj  config.h  glib_wrapper.c  gtk.vsprops  stardict-advertisement-plugin.vcproj  stardict-dictdotcn-plugin.vcproj  stardict-editor.vcproj  stardict-editorrc.rc  stardict-html-parsedata-plugin.vcproj  stardict-lib.vcproj  stardict-loader.vcproj  stardict-sapi-tts-plugin.vcproj  stardict-test-str.vcproj  stardict-update-info-plugin.vcproj  stardict-wordnet-plugin.vcproj  stardict-wordnet_parsedata-plugin.vcproj  stardict-xdxf-parsedata-plugin.vcproj  stardict.sln  stardict.vcproj  stardictrc.rc  textouthook.vcproj  textoutspy.vcproj
dict/pixmaps/: Makefile.am  stardict.xcf
dict/po/: LINGUAS  POTFILES.in  ar.po  be.po  cs.po  de.po  el.po  es.po  fr.po  ga.po  he.po  hr.po  hu.po  kk.po  ku.po  lt.po  mk.po  nl.po  pt_BR.po  ru.po  rw.po  sk.po  sv.po  tr.po  tt.po  uk.po  vi.po  zh_CN.po  zh_TW.po
dict/src/: GNOME_Stardict-common.c  GNOME_Stardict.h  GNOME_Stardict.idl  Makefile.am  articleview.cpp  articleview.h  class_factory.cpp  class_factory.h  cmdlineopts.cpp  cmdlineopts.h  conf.cpp  conf.h  config_file.h  desktop.cpp  desktop.h  dictmanage.cpp  dictmanage.h  dictmanagedlg.cpp  dictmanagedlg.h  docklet.cpp  docklet.h  eggaccelerators.cpp  eggaccelerators.h  floatwin.cpp  floatwin.h  gconf_file.cpp  gconf_file.h  globalhotkeys.cpp  globalhotkeys.h  gtk_iskeyspressed.cpp  gtk_iskeyspressed.h  gtktextviewpango.cpp  gtktextviewpango.h  hotkeyeditor.c  hotkeyeditor.h  inifile.cpp  inifile.h  iskeyspressed.h  log.cpp  log.h  (+28 more)
dict/stardict-plugins/: Makefile.am
dict/tests/: Makefile.am  sample1.dict  t_articleview.cpp  t_config_file.cpp  t_convert_old_ini.cpp  t_dict.cpp  t_dict_client.cpp  t_fuzzy.cpp  t_lookupdata.cpp  t_query.cpp  t_res_database.cpp  t_str.cpp  t_xml.cpp
help/: Makefile.am
help/C/: Makefile.am  stardict-C.omf  stardict.xml
help/mk/: Makefile.am  stardict-mk.omf  stardict.xml
help/nl/: Makefile.am  nl.po  stardict-nl.omf  stardict.xml
help/ru/: Makefile.am  ru.po  stardict-ru.omf  stardict.xml
help/uk/: Makefile.am  stardict-uk.omf  stardict.xml
help/zh_CN/: Makefile.am  stardict-zh_CN.omf  stardict.xml
help/zh_TW/: Makefile.am  stardict-zh_TW.omf  stardict.xml
lib/: COPYING  INSTALL  Makefile.am  README  autogen.sh  config-custom.h  configure.ac
lib/src/: Makefile.am  ifo_file.cpp  ifo_file.h  lib_binary_dict_parser.cpp  lib_binary_dict_parser.h  lib_chars.cpp  lib_chars.h  lib_dict_data_block.cpp  lib_dict_data_block.h  lib_dict_verify.cpp  lib_dict_verify.h  lib_res_store.cpp  lib_res_store.h  libcommon.cpp  libcommon.h
mvsc/: Makefile.am  advertisement.vcproj  config.h  dictdotcn.vcproj  glib_wrapper.c  gtk.vsprops  html-parsedata.vcproj  powerword-parsedata.vcproj  qqwry.vcproj  readme.txt  sapi-tts.vcproj  stardict-lib.vcproj  stardict-mvsc.sln  stardict-mvsc.vcproj  stardict-qqwry-plugin.vcproj  stardict-test-str.vcproj  stardict-update-info-plugin.vcproj  stardict-wiki-parsedata-plugin.vcproj  stardict-wordnet_parsedata-plugin.vcproj  stardict.vcproj  stardictrc.rc  texthook.vcproj  textouthook.vcproj  textoutspy.vcproj  update-info.vcproj  wiki-parsedata.vcproj  wordnet.vcproj  wordnet_parsedata.vcproj  xdxf-parsedata.vcproj
src/: GNOME_Stardict-common.c  GNOME_Stardict-skels.c  GNOME_Stardict-stubs.c  GNOME_Stardict.h  Makefile.am  articleview.cpp  articleview.h  class_factory.cpp  class_factory.hpp  conf.cpp  conf.h  config_file.hpp  desktop.cpp  desktop.hpp  dictmanage.cpp  dictmanage.h  dictmanagedlg.cpp  dictmanagedlg.h  docklet.cpp  docklet.h  eggaccelerators.cpp  floatwin.cpp  floatwin.h  gconf_file.cpp  gconf_file.hpp  globalhotkeys.h  gtk_iskeyspressed.cpp  gtktextviewpango.cpp  gtktextviewpango.h  inifile.cpp  inifile.hpp  log.cpp  log.h  mainwin.cpp  mainwin.h  pangoview.cpp  pangoview.h  pluginmanagedlg.cpp  pluginmanagedlg.h  prefsdlg.cpp  (+20 more)
src/dic/: Makefile.am
src/lib/: Makefile.am  collation.cpp  collation.h  collation.pp  common.cpp  common.hpp  compositelookup.cpp  compositelookup.h  ctype-mb.c  ctype-mb.cpp  (+58 more)
stardict-plugins/: Makefile.am
stardict-tools/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  config-custom.h  configure.ac  configure.in  stardict-editor.dev  stardict-editor.spec
tests/: Makefile.am  t_articleview.cpp  t_config_file.cpp  t_convert_old_ini.cpp  t_dict.cpp  t_dict_client.cpp  t_fuzzy.cpp  t_lookupdata.cpp  t_query.cpp  t_res_database.cpp  t_xml.cpp
tools/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  stardict-editor.spec
(+947 files in other folders)
