## Process this file with automake to produce Makefile.in

SUBDIRS = src tests pixmaps po help data doc

EXTRA_DIST = \
	ChangeLog  		\
	README 			\
	INSTALL			\
	TODO 			\
	NEWS			\
	autogen.sh		\
	stardict.spec.in stardict-withoutgnome.spec.in \
	dictionary.spec	\
	treedict.spec	\
	stardict.dev stardict.ico stardict-uninst.ico stardict-installer.nsi \
	omf.make		\
	xmldocs.make 		\
	intltool-extract.in 	\
	intltool-merge.in 	\
	intltool-update.in
