## Process this file with automake to produce Makefile.in

SUBDIRS = m4 src stardict-plugins tests pixmaps po help data doc \
	debian-upstream mvsc
ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = \
	ChangeLog  		\
	README 			\
	README.SVN		\
	INSTALL			\
	TODO 			\
	NEWS			\
	autogen.sh		\
	stardict.spec.in stardict-withoutgnome.spec.in \
	dictionary.spec	\
	treedict.spec	\
	stardict.dev stardict.ico stardict-uninst.ico stardict-installer.nsi \
	omf.make		\
	xmldocs.make 		\
	intltool-extract.in 	\
	intltool-merge.in 	\
	intltool-update.in	\
	stardictrc.rc
