## Process this file with automake to produce Makefile.in.
if GNOME_SUPPORT
include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = stardict
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = \
	figures/stardict_float_window.png	\
	figures/stardict_main_window.png	\
	figures/stardict_notification_area.png

DOC_LINGUAS = mk nl ru uk zh_CN zh_TW
endif
