EXTRA_DIST = config.h glib_wrapper.c stardict-mvsc.sln stardictrc.rc	\
		stardict-mvsc.vcproj textouthook.vcproj textoutspy.vcproj	\
		advertisement.vcproj dictdotcn.vcproj html-parsedata.vcproj powerword-parsedata.vcproj update-info.vcproj wiki-parsedata.vcproj xdxf-parsedata.vcproj	\
		wordnet.vcproj wordnet_parsedata.vcproj	\
		sapi-tts.vcproj qqwry.vcproj	\
		readme.txt
