DIST_SUBDIRS = stardict-advertisement-plugin stardict-update-info-plugin stardict-spell-plugin stardict-gucharmap-plugin stardict-festival-tts-plugin stardict-espeak-tts-plugin

SUBDIRS = stardict-advertisement-plugin stardict-update-info-plugin $(SPELL_PLUGIN_DIR) $(GUCHARMAP_PLUGIN_DIR) $(FESTIVAL_PLUGIN_DIR) $(ESPEAK_PLUGIN_DIR)
