DIST_SUBDIRS = stardict-dictdotcn-plugin stardict-advertisement-plugin stardict-man-plugin stardict-update-info-plugin stardict-html-parsedata-plugin stardict-xdxf-parsedata-plugin stardict-wordnet-plugin stardict-powerword-parsedata-plugin stardict-wiki-parsedata-plugin stardict-spell-plugin stardict-gucharmap-plugin stardict-festival-tts-plugin stardict-espeak-tts-plugin

SUBDIRS = stardict-dictdotcn-plugin stardict-advertisement-plugin stardict-man-plugin stardict-update-info-plugin stardict-html-parsedata-plugin stardict-xdxf-parsedata-plugin stardict-wordnet-plugin stardict-powerword-parsedata-plugin stardict-wiki-parsedata-plugin $(SPELL_PLUGIN_DIR) $(GUCHARMAP_PLUGIN_DIR) $(FESTIVAL_PLUGIN_DIR) $(ESPEAK_PLUGIN_DIR)
